<resources>
    <string name="app_name">KebunQ</string>
    <string name="title_home">Beranda</string>
    <string name="community">Community</string>
    <string name="History">Riwayat Prediksi</string>
    <string name="list_penyakit">Daftar Penyakit</string>
    <string name="settings">Pengaturan</string>
    <string name="ajakan_deteksi">Deteksi penyakit tanamanmu sekarang!</string>
    <string name="fab_content_desc">deteksi</string>
    <string name="tv_deskripsi_home">Pilih dulu jenis tanamanmu ya..</string>
    <string name="tv_judul_history_analisi">Hasil deteksi terbaru</string>
    <string name="btn_galeri">Ambil dari Galeri</string>
    <string name="btn_photo">Photo</string>
    <string name="analisis_gambar">Analisis Gambar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--feature-history-->
    <string name="hasil_prediksi">Hasil Prediksi</string>
    <string name="tanggal_prediksi">Tanggal Prediksi</string>
    <string name="empty_state">Hasil Prediksi Masih Kosong</string>
    <string name="nama_penyakit">Judul Nama Penyakit</string>
    <string name="jenis_tanaman">Jenis Tanaman</string>
    <string name="confidenceScoredanTanggal">Confidence Score - 20 Oktober 2024</string>
    <string name="tab_hasil_analisis">Hasil Analisis</string>
    <string name="tab_saran_pengobatan">Saran Pengobatan</string>
    <string name="content_tab_hasil_analisis">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="content_tab_saran_pengobatan">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="artikel">Baca Artikel</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tv_login">Hello, Welcome Back!</string>
    <string name="btn_login">Login</string>
    <string name="btn_login_google">Login with Google</string>
    <string name="btn_login_facebook">Login with Facebook</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!--    facebook-->
    <string name="title_welcome_page">Selamat Datang di KebunQ!</string>
    <string name="message_welcome_page">Jangan biarkan masalah kesehatan tanaman mengurangi hasil panen Anda. Dengan KebunQ, identifikasi gejala, temukan solusi, dan rawat tanaman Anda dengan lebih baik.</string>

    <string name="tv_register">Hello, Welcome to KebunQ!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_Register">Register</string>
    <string name="or">or</string>
    <string name="btn_facebook">Register with Facebook</string>
    <string name="btn_google">Register with Google</string>
    <string name="your_web_client_id">269618306064-k9dcbc4tornsn273gkjj2quu7kv6b8qt.apps.googleusercontent.com</string>
    <string name="facebook_app_id">925711039106788</string>
    <string name="fb_login_protocol_scheme">fb925711039106788</string>
    <string name="facebook_client_token">fce6ebbfa8587d3e10ae1d23d8433d1b</string>

    <string name="teks_privasi_akun">KebunQ menghargai privasi Anda. Kami mengumpulkan beberapa jenis data pengguna untuk mendukung fungsi utama aplikasi. Data yang dikumpulkan meliputi informasi akun seperti nama, email, dan informasi profil yang Anda berikan, data interaksi seperti riwayat pendeteksian penyakit dan aktivitas di fitur komunitas, serta data teknis seperti gambar yang diunggah melalui kamera atau galeri, dan informasi perangkat seperti jenis perangkat dan alamat IP. Data ini digunakan untuk menjalankan deteksi penyakit tanaman menggunakan teknologi machine learning, menampilkan riwayat pendeteksian, memperbaiki layanan melalui analitik, serta melindungi keamanan aplikasi.
        \n\nData Anda disimpan secara aman di cloud dengan penyedia layanan terpercaya yang mematuhi standar keamanan tinggi. Kami juga menerapkan protokol keamanan seperti enkripsi untuk melindungi data dari akses tidak sah. KebunQ hanya membagikan data Anda kepada pihak ketiga dalam kondisi tertentu, misalnya kepada penyedia layanan cloud untuk keperluan penyimpanan dan pemrosesan, atau jika diwajibkan oleh hukum yang berlaku.
        \n\nSebagai pengguna, Anda memiliki hak untuk mengakses dan mengedit data Anda melalui fitur Edit Profile di aplikasi. Anda juga dapat meminta penghapusan data dengan menghubungi kami. Aplikasi KebunQ membutuhkan koneksi internet aktif untuk menjalankan pendeteksian penyakit, menyimpan data di cloud, dan mengakses fitur komunitas serta daftar penyakit tanaman.
        \n\nKami dapat memperbarui kebijakan ini dari waktu ke waktu, dan perubahan akan diberitahukan melalui aplikasi atau email. Dengan menggunakan aplikasi KebunQ, Anda menyetujui kebijakan privasi ini.</string>
    <string name="teks_syarat_ketentuan">Dengan mengakses dan menggunakan aplikasi KebunQ, Anda setuju untuk mematuhi syarat dan ketentuan yang tercantum dalam perjanjian ini. Aplikasi KebunQ disediakan untuk tujuan mendeteksi penyakit tanaman anggur, timun, dan tomat menggunakan teknologi machine learning dan cloud computing. Anda setuju untuk menggunakan aplikasi ini hanya untuk tujuan yang sah dan sesuai dengan hukum yang berlaku di negara Anda. Anda tidak diperkenankan untuk melakukan tindakan yang dapat merusak, mengubah, atau mengakses sistem atau jaringan kami secara tidak sah.
        \n\nAplikasi KebunQ memungkinkan pengguna untuk mengunggah gambar melalui kamera atau galeri untuk deteksi penyakit tanaman. Anda menjamin bahwa gambar dan informasi yang diunggah adalah milik Anda dan tidak melanggar hak cipta atau hak privasi pihak ketiga. Kami berhak untuk menangguhkan atau menutup akun pengguna yang melanggar ketentuan ini atau melakukan tindakan yang membahayakan integritas aplikasi.
        \n\nKami berhak untuk mengubah atau memperbarui aplikasi KebunQ kapan saja tanpa pemberitahuan terlebih dahulu. Perubahan tersebut akan mencakup pembaruan fitur, penghapusan fitur tertentu, atau perubahan pada tampilan aplikasi. Kami tidak bertanggung jawab atas kerugian yang timbul akibat perubahan atau penghentian layanan.
        \n\nAplikasi KebunQ mengimplementasikan teknologi machine learning yang memerlukan data pengguna untuk analisis, serta memanfaatkan cloud computing untuk penyimpanan data. Anda setuju bahwa data yang Anda berikan akan digunakan sesuai dengan Kebijakan Privasi Akun yang kami tetapkan. Kami berhak untuk menghentikan akses Anda ke aplikasi apabila terjadi penyalahgunaan atau pelanggaran terhadap Syarat dan Ketentuan ini.
        \n\nKami tidak bertanggung jawab atas kerugian atau kerusakan yang timbul akibat penggunaan aplikasi ini, baik secara langsung maupun tidak langsung. Anda setuju untuk membebaskan kami dari segala tuntutan atau klaim yang mungkin timbul akibat penggunaan aplikasi.</string>
    <string name="foto_profil_pengguna">Foto profil pengguna</string>
    <string name="icon">icon</string>
    <string name="loading_email">Loading email…</string>
    <string name="tv_privasi_akun">Privasi Akun</string>
    <string name="mode_gelap">Mode Gelap</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="keluar">Keluar</string>
    <string name="syarat_dan_ketentuan"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="loading_name">Loading user name…</string>

    <string name="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="error_msg_cucumber">Tidak ada list penyakit timun</string>
    <string name="error_msg_tomato">Tidak ada list penyakit tomat</string>
    <string name="error_msg_grape">Tidak ada list penyakit anggur</string>
    <string name="plant_disease_image">plant disease image</string>
    <string name="error_msg_listdiseases">Tidak ada list penyakit yang tersedia</string>
    <string name="description">Deskripsi</string>
    <string name="welcome_text">Selamat Datang, %1$s</string>
    <string name="selamat_datang">Selamat datang!</string>
    <string name="cs">%1$s - CS %2$s%%</string>

</resources>