<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/History" />

<!--    <item-->
<!--        android:id="@+id/navigation_community"-->
<!--        android:icon="@drawable/ic_community"-->
<!--        android:title="@string/community" />-->

    <item
        android:id="@+id/navigation_list_penyakit"
        android:icon="@drawable/ic_list_penyakit"
        android:title="@string/list_penyakit" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>

</menu>