<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.AmbilGambarFragment">

    <ImageView
        android:id="@+id/iv_foto_deteksi"
        android:layout_width="match_parent"
        android:layout_height="461dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/imageplaceholder" />

    <Button
        android:id="@+id/btn_galeri"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:text="@string/btn_galeri"
        app:icon="@drawable/ic_add_photo_24"
        app:layout_constraintEnd_toStartOf="@+id/btn_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_foto_deteksi" />

    <Button
        android:id="@+id/btn_camera"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/btn_photo"
        app:icon="@drawable/ic_photo_camera_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_foto_deteksi" />

    <Button
        android:id="@+id/btn_analisis_gambar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/analisis_gambar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_camera"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="@+id/btn_galeri"
        app:layout_constraintTop_toBottomOf="@+id/btn_galeri"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>